# collector

./: .gitignore  Cargo.toml  test_recv_dict.py
collector-api/: Cargo.toml
collector-api/src/: lib.rs  server.rs
collector-api/src/core/: code.rs  response.rs
collector-api/src/dao/: error.rs  mod.rs  planned_curve.rs  user.rs
collector-api/src/handlers/: data.rs  mod.rs  network.rs  planned_curve.rs  user.rs  ws.rs
collector-api/src/middleware/: auth.rs  inject.rs  log.rs  mod.rs
collector-api/src/models/: mod.rs  planned_curve.rs  user.rs
collector-api/src/routes/: data.rs  mod.rs  network.rs  planned_curve.rs  user.rs  ws.rs
collector-api/src/services/: data.rs  error.rs  mod.rs  network.rs  planned_curve.rs  user.rs
collector-cmd/: Cargo.toml
collector-cmd/src/: config.rs  lib.rs  main.rs
collector-core/: Cargo.toml
collector-core/src/: lib.rs  shutdown.rs
collector-core/src/center/: data_center.rs  mod.rs
collector-core/src/config/: can_conf.rs  gpio_conf.rs  mod.rs  modbus_conf.rs  north_modbus_conf.rs
collector-core/src/core/: mod.rs  point.rs
collector-core/src/decode/: mod.rs  modbus.rs
collector-core/src/dev/: can_bus.rs  can_dev.rs  dev_config.rs  gpio.rs  manager.rs  mod.rs  modbus_dev.rs  state.rs
collector-core/src/dev/can_dev/: backoff.rs  device.rs  devices.rs  downlink.rs  mod.rs  runner.rs
collector-core/src/dev/modbus_dev/: backoff.rs  batch.rs  block.rs  device.rs  downlink.rs  error.rs  mod.rs  runner.rs  state.rs
collector-core/src/dock/: mod.rs  mqtt.rs  protocol_spec.md
collector-core/src/dock/frame/: builders.rs  checksum.rs  codec.rs  error.rs  mod.rs  point_convert.rs  tests.rs  types.rs
collector-core/src/dock/modbus/: mod.rs  server.rs  tables.rs
collector-core/src/dock/mqtt/: client.rs  mod.rs
collector-core/src/dock/tcp/: config.rs  error.rs  frame.rs  mod.rs  server.rs  session.rs  traits.rs
collector-core/src/runtime/: core.rs  emu.rs  mod.rs  planned_curve.rs
collector-core/src/utils/: database.rs
collector-derive/: Cargo.toml
collector-derive/src/: lib.rs
collector-engine/: Cargo.toml  EMU点位.md
collector-engine/src/: lib.rs  strategy.rs
collector-engine/src/action/: mod.rs  power.rs
collector-engine/src/core/: fault_diagnosis.rs  mod.rs
collector-engine/src/emu/: cmd.rs  command.rs  core.rs  emu_runtime.rs  fault.rs  mod.rs  planned_curve.rs  tms.rs
collector-engine/src/lua/: loader.rs  mod.rs  scheduler.rs  watcher.rs
collector-engine/src/lua/api/: datacenter.rs  logging.rs  mod.rs
collector-engine/src/mod_engine/: engine.rs  errors.rs  eventbus.rs  mod.rs  scheduler.rs  script_loader.rs  script_manager.rs  timer_task.rs  watcher.rs
collector-engine/src/mod_engine/api/: can.rs  dc.rs  log.rs  mod.rs  mqtt.rs  store.rs
config/: .~配置_v2.0.xlsx  BCU_GOLD.xlsx  BMS_鸿合国轩.xlsx  BMS_鸿合自研.xlsx  GPIO.xlsx  MODBUS_REGISTERS.xlsx  PCS_125_英博.xlsx  PCS_125_英博_trans.xlsx  PCS_450.xlsx  PCS_英博_大机.xlsx  PCS_英博_大机_V3.6.xlsx  config.json  中车_配置_v2.0.xlsx  水冷机组_埃森特.xlsx  永泰_2_BCU.xlsx  永泰_2_BCU_bak.xlsx  测控柜_中车.xlsx  测控柜_鸿合.xlsx  消防温感烟感.xlsx  配置_v2.0.xlsm  配置_v2.0.xlsx  除湿机.xlsx  鸿合_配置_v2.0.xlsx
docs/: data.sql  graceful_shutdown.md  plan_curve_seed.sql
lua_script/: .luarc.json  bms.lua
lua_scripts/: _types.lua  bcu_can_request.lua  pcs.lua
protocol/: Cargo.toml
scripts/: can_sim.py  export_config_from_xlsm.py  translate_config.py  translate_iec104_config.py  translate_modbus_config.py  translate_yongtai_2_bcu.py
