[package]
name = "collector"
version = "0.1.0"
edition = "2024"
authors = ["yuanan"]


[dependencies]
# 字节处理
bytes = "1.10.0"
# 错误处理
thiserror = "2.0.11"
# 错误处理
anyhow = "1.0.95"
# 命令行框架
clap = { version = "4.5.28", features = ["derive"] }
# 序列化
serde = { version = "1.0.217", features = ["derive"] }
# 序列化yaml支持
serde_yml = "0.0.12"
# 高性能异步运行时
tokio = { version = "1.43.0", features = ["full"] }
# 定时任务
tokio-cron-scheduler = "0.13.0"
# 异步modbus协议支持
tokio-modbus = { version = "0.16.1", features = ["rtu", "tcp"] }
# tokio 异步串口支持
tokio-serial = "5.4.5"
# CAN协议支持，开启tokio特性
socketcan = { version = "3.5.0", features = ["tokio"] }
# 时间工具
chrono = "0.4.39"
# 日志框架
log = "0.4.25"
tracing-subscriber = { version = "0.3.19", features = ["chrono"] }
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-log = "0.2.0"
rand = "0.9.0"
# 异步trait支持
async-trait = "0.1.86"
# RammitMQ 消息队列支持
amqprs = "2.1.0"
# CSV 文件读写
csv = "1.3.1"
# 异步轻量级mqtt
mosquitto-rs = "0.11.2"
openssl = { version = "0.10.71", features = ["vendored"] }
# 多核并行处理
rayon = "1.10.0"
# json处理
serde_json = "1.0.140"
# 正则表达式校验
regex = "1.11.1"
# 提供 C 类型支持
libc = "0.2.172"
# decimal支持
rust_decimal = "1.37.1"
## 更好的内存分配器
mimalloc = "0.1.47"


#[profile.release]
## 去除调试信息
#strip = true
## 启用链接时优化
#lto = true
## 最大运行时优化
#opt-level = 3
## 发生panic终止程序, 可减少程序体积
#panic = "abort"
## 限制代码生成单元为1, 可提高运行效率并减少程序体积
#codegen-units = 1
