[workspace]
resolver = "3"

members = ["collector-cmd", "collector-core", "protocol"]

[workspace.dependencies]
# 序列化
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.140"
# 栈上数组
smallvec = "1.15.1"
# 错误处理
thiserror = "2.0.11"
# 错误处理
anyhow = "1.0.95"
# 高性能异步运行时
tokio = { version = "1.43.0", features = ["full"] }
# 日志框架
log = "0.4.25"
tracing-subscriber = { version = "0.3.19", features = ["chrono","env-filter"] }
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-log = "0.2.0"
tracing-error = "0.2.1"
# 异步trait支持
async-trait = "0.1.86"
# 更好的内存分配器
mimalloc = "0.1.47"

[profile.release]
# 去除调试信息
strip = true
# 启用链接时优化
lto = true
# 最大运行时优化
opt-level = 3
# 发生panic终止程序, 可减少程序体积
panic = "abort"
# 限制代码生成单元为1, 可提高运行效率并减少程序体积
codegen-units = 1
