[package]
name = "collector-api"
version = "0.1.0"
edition = "2024"

[dependencies]
collector-core = { path = "../collector-core" }
salvo = { version = "0.93.0", features = ["jwt-auth", "websocket"] }
validator = { version = "0.20.0", features = ["derive"] }
tokio = { workspace = true }
tokio-util = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
chrono = { workspace = true }
tracing.workspace = true
tracing-subscriber.workspace = true
jsonwebtoken = "10.3.0"
argon2 = "0.5.3"
