[package]
name = "collector-cmd"
version = "0.1.0"
edition = "2024"

[dependencies]
collector-core = { path = "../collector-core" }
# 命令行框架
clap = { version = "4.5.28", features = ["derive"] }
mimalloc = { workspace = true }
tokio = { workspace = true }
log = { workspace = true }
tracing-subscriber = { workspace = true }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-log = { workspace = true }
tracing-error = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
