[package]
name = "collector-core"
version = "0.1.0"
edition = "2024"

[dependencies]
dashmap = "6.1.0"
tokio = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
smallvec = { workspace = true }
tokio-modbus = { version = "0.16.1", features = ["rtu", "tcp"] }
tokio-serial = "5.4.5"
calamine = "0.32.0"
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
