[package]
name = "collector-core"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
smallvec = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
bytes = { workspace = true }
zstd = "0.13.3"
rumqttc = "0.25.1"
dashmap = "6.1.0"
tokio-modbus = { version = "0.16.1", features = ["rtu", "tcp"] }
tokio-serial = "5.4.5"
calamine = "0.32.0"

[target.'cfg(target_os = "linux")'.dependencies]
socketcan = { version = "3.5.0", features = ["tokio"] }
