[package]
name = "collector-engine"
version = "0.1.0"
edition = "2024"

[dependencies]
collector-core = { path = "../collector-core" }
tokio = { workspace = true }
tokio-util = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tracing.workspace = true
tracing-subscriber.workspace = true
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
parking_lot = { workspace = true }
futures-util = { workspace = true }
mlua = { version = "0.11.6", features = ["async", "lua54", "vendored", "send","serialize"] }
notify = { version = "7", features = ["macos_fsevent"] }
cron = "0.13"
